<resources>
    <string name="app_name">Voyage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string-array name="roomtype">
        <item>Chambre Simple</item>
        <item>Chambre Double</item>
        <item>Suite </item>
        <item>Chambre Familiale</item>
    </string-array>
    <string-array name="stars">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="company">
        <item>Royal Air Maroc</item>
        <item>Air Arabia Maroc</item>
        <item>Dalia Air</item>
    </string-array>
    <string name="room_type_hint">Type de chambre</string>
    <string name="search_title">Rechercher Voyage</string>
    <string name="destination_hint">Destination</string>
    <string name="date_hint">Sélectionner une date</string>
    <string name="search_button_text">Rechercher</string>
    <string name="connect_button_text">Se connecter</string>
    <string name="connection_text">Connexion</string>
    <string name="gestion_voyage_text">Gestion_Voyage</string>
    <string name="username_hint">Nom Utilisateur</string>
    <string name="cnx_text">Connexion</string>
    <string name="inscription_text">Inscription</string>
    <string name="no_account_text">Vous n\'avez pas de compte?</string>
    <string name="password_hint">Mot de passe</string>
    <string name="back_button_description">Back Button</string>
    <string name="email_hint">Adresse mail</string>
    <string name="register_button_text">S\'inscrire</string>
    <string name="already_have_account_text">Vous avez déjà un compte?</string>
    <string name="reserve_hotels">Réserver Hôtels</string>
    <string name="departure_date">Date de départ</string>
    <string name="arrival_date">Date d\'arrivée</string>
    <string name="room_type">Type de chambre</string>
    <string name="reserve_button_text">Réserver</string>
    <string name="search_flights">Rechercher Vols</string>
    <string name="search_hotels">Rechercher Hotels</string>
    <string name="enter_city">Enter city</string>
    <string name="compagnie_aerienne">Compagnie Aérienne</string>
    <string name="departure_time">Heure de Départ:</string>
    <string name="arrival_time">Heure d\'Arrivée:</string>
    <string name="numero_vol">numero_vol</string>
    <string name="ville">ville</string>
    <string name="ville_depart">Ville de départ</string>
    <string name="ville_arrivee">Ville arrivée</string>
    <string name="deconnecte">Déconnecter</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="options">Que voulez-vous faire ?</string>
    <string name="nbJours">Nombre de jours</string>
    <string name="roomtype">Type chambre</string>
    <string name="logout_image_description">Logout icon</string>
    <string name="voyage_image_description">Image voyage</string>
    <string name="back_arrow_description">Back Arrow</string>
    <string name="back_button_desc">Back button</string>
    <string name="date_format_hint">Format: JJ/MM/AAAA</string>
    <string name="result">Résultat</string>
    <string name="reservation_image_description">Reservation Image</string>
    <string name="etoiles">étoile(s)</string>
        <string name="hotel_name">sdf</string>
        <string name="hotel_city">sdfsdfdsf</string>
        <string name="hotel_stars">sdfdsfdsfdsfds</string>
        <string name="reserve">Réserver</string>
    <string name="company_name">ddd</string>

</resources>