<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="repo.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/app_color">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/voyage"
            android:layout_marginTop="70dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/voyage_image_description"
            />

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenue"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/searchHotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/search_hotels"
        android:onClick="searchHotel"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/searchVoyage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:paddingLeft="58dp"
        android:paddingRight="58dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/search_flights"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/deconnecte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:focusable="true"
        android:text="@string/deconnecte"
        android:textSize="20sp"
        android:clickable="true"
        android:textColor="@color/black"
        android:minHeight="48dp"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/logout"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logout_image_description"
        />

</LinearLayout>