<!-- item_hotel.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/hotel_name"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp"
        android:background="@color/dark_gray"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:background="#F3F3F3"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel_city"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/text_view_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/hotel_stars"
                android:textSize="16sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/reserver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/black"
            android:layout_weight="0.2"
            android:text="@string/reserve" />
    </LinearLayout>

</LinearLayout>
