<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="repo.SearchHotelActivity">

    <LinearLayout
        android:id="@+id/searchZone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        android:padding="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:onClick="back"
                android:src="@drawable/baseline_arrow_back_24"
                android:contentDescription="@string/back_button_description"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_medium"
                android:text="@string/search_hotels"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/ville"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:padding="10dp"
            android:background="@color/white"
            android:hint="@string/ville"
            android:inputType="text"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RoomStart"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerRoomStart"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"

                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:entries="@array/stars"
                android:hint="@string/room_type"
                android:minHeight="48dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/etoiles"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:backgroundTint="@color/button_color"
            android:onClick="searchHotels"
            android:text="@string/search_hotels"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchZone"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_color"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:text="@string/result"/>
        <ListView
            android:id="@+id/listhotels"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</RelativeLayout>
