<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_color"
    tools:context="repo.MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/voyage"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/voyage_image_description"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dancing_bold"
        android:padding="5dp"
        android:text="@string/gestion_voyage_text"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_border"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/email_hint"
            android:textColorHint="@color/app_color"
            app:cursorColor="@color/app_color"
            app:hintTextColor="@color/app_color"
            app:startIconDrawable="@drawable/baseline_account_circle_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail"
                android:layout_width="337dp"
                android:layout_height="wrap_content"
                android:background="@drawable/editstrock"
                android:drawablePadding="8dp"
                android:inputType="textEmailAddress"
                android:minEms="12"
                android:padding="20dp"
                app:drawableTint="@color/app_color" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/password_hint"
            android:textColorHint="@color/app_color"
            app:cursorColor="@color/app_color"
            app:hintTextColor="@color/app_color"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/icon_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mot_de_passe"
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:background="@drawable/editstrock"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:padding="20dp"
                app:startIconDrawable="@drawable/baseline_compass_calibration_24" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/seconnecter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/dm_medium"
            android:minWidth="3dp"
            android:minHeight="3dp"
            android:padding="20dp"
            android:text="@string/connect_button_text"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="@color/button_color"
            android:onClick="seConnecter"
            app:cornerRadius="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_medium"
                android:padding="5dp"
                android:text="@string/no_account_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/inscrire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/dm_medium"
                android:minHeight="48dp"
                android:onClick="inscrire"
                android:padding="5dp"
                android:text="@string/inscription_text"
                android:textColor="@color/app_color"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
