<!-- item_hotel.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="6dp"
        android:background="@color/button_color"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/company_name"
            android:layout_weight="1.6"
            android:layout_marginBottom="6dp"
            android:background="@color/button_color"
            android:textColor="@color/black"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/depart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/hotel_city"
            android:gravity="end"
            android:layout_marginStart="10dp"
            android:textColor="@color/app_color"
            android:textSize="16sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:background="#F3F3F3"
        android:padding="6dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/hDepart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/hotel_city"
                android:textSize="16sp"/>


            <TextView
                android:id="@+id/hArrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/hotel_stars"
                android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>
